Getting metrics from linked accounts.